--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.11.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
+    "vant": "^2.0.9",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.3",
@@ -31,6 +32,8 @@
     "babel-jest": "^23.6.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "lint-staged": "^8.1.5",
     "vue-template-compiler": "^2.6.10"
   },
